test/compile-errors/local-ignored-but-mutable.crow
main void()
	_ mut = 0
